log
Thu 16 May 2024 03:07:38 PM UTC: 
 tests:  0|5
total_score: 0/70
b9a2c55
Thu 16 May 2024 03:10:25 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
3460e8d
Thu 16 May 2024 03:12:30 PM UTC: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
548b70e
Thu 16 May 2024 03:12:53 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f042e0f
Thu 16 May 2024 03:16:39 PM UTC: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
089b3c8
Thu 16 May 2024 03:24:52 PM UTC: 
 sudoku.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:14: error: unused variable ‘k’ [-Werror=unused-variable]
   48 |    int i, j, k;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
e760ebc
Thu 16 May 2024 03:25:16 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
af56472
Thu 16 May 2024 03:25:37 PM UTC: 
 sudoku.c | 49 ++++++++++++++++++++++++++-----------------------
 1 file changed, 26 insertions(+), 23 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:15: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |     int i, j, k;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
7e5a25c
Thu 16 May 2024 03:26:39 PM UTC: 
 sudoku.c | 38 +++-----------------------------------
 1 file changed, 3 insertions(+), 35 deletions(-)
 tests:  2|4
total_score: 15/70
6fe673a
Thu 16 May 2024 03:34:10 PM UTC: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  0|5
total_score: 0/70
72e3223
Thu 16 May 2024 03:39:32 PM UTC: 
 sudoku.c | 59 ++++++-----------------------------------------------------
 1 file changed, 6 insertions(+), 53 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
   74 | }
      | ^
sudoku.c: In function ‘DFS’:
sudoku.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1a0593a
Thu 16 May 2024 03:39:56 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
856f5ee
Thu 16 May 2024 03:41:15 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
8846223
